{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 4,
  "lineage": "77b47a9c-3c2c-e615-7445-61e5d177e4e2",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991311245747:vpc/vpc-014f14080ca872713",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0684197d86fdf75d4",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0a3b54c54732cb52d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014f14080ca872713",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-062c5962f091583f5",
            "owner_id": "991311245747",
            "tags": {
              "Name": "dev-demo-vpc",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-demo-nginx",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026a6ccccb37557a8",
            "arn": "arn:aws:ec2:us-east-1:991311245747:instance/i-019edf869b55ff686",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-019edf869b55ff686",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-demo-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-029892244b9f51a33",
            "private_dns": "ip-10-0-45-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.45.6",
            "public_dns": "ec2-50-17-84-163.compute-1.amazonaws.com",
            "public_ip": "50.17.84.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "dev-demo-nginx"
                },
                "tags_all": {
                  "Name": "dev-demo-nginx"
                },
                "throughput": 0,
                "volume_id": "vol-08d104886f14ee547",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de9110759253ff82",
            "tags": {
              "Name": "dev-demo-nginx",
              "managed_by": "Terraform",
              "module": "terraform-ec2"
            },
            "tags_all": {
              "Name": "dev-demo-nginx",
              "managed_by": "Terraform",
              "module": "terraform-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-049a12b17bd1bee0b"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux_2",
            "module.ec2.data.aws_ami.ubuntu_20_04",
            "module.ec2.data.aws_security_groups.selected",
            "module.ec2.data.aws_subnets.selected",
            "module.ec2.random_shuffle.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991311245747:vpc/vpc-014f14080ca872713",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0684197d86fdf75d4",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0a3b54c54732cb52d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014f14080ca872713",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-062c5962f091583f5",
            "owner_id": "991311245747",
            "tags": {
              "Name": "dev-demo-vpc",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-demo-vpc-ingress-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991311245747:security-group/sg-030b1b427eea79d72",
            "description": "Security group for nginx instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030b1b427eea79d72",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-demo-vpc-ingress-sg",
            "name_prefix": "",
            "owner_id": "991311245747",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-demo-vpc-ingress-sg",
              "managed_by": "Terraform",
              "module": "terraform-security-group"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-ingress-sg",
              "managed_by": "Terraform",
              "module": "terraform-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-014f14080ca872713"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991311245747:security-group/sg-049a12b17bd1bee0b",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-049a12b17bd1bee0b",
            "name": "default",
            "tags": {
              "Name": "dev-demo-vpc-default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-014f14080ca872713"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-demo-vpc-ngw01",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd22b68fd80479d7",
            "arn": "arn:aws:ec2:us-east-1:991311245747:elastic-ip/eipalloc-0cd22b68fd80479d7",
            "association_id": "eipassoc-0c850c99c50c7b68a",
            "domain": "vpc",
            "id": "eipalloc-0cd22b68fd80479d7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b4c45fa3811f6552",
            "private_dns": "ip-10-0-2-151.ec2.internal",
            "private_ip": "10.0.2.151",
            "public_dns": "ec2-35-173-118-33.compute-1.amazonaws.com",
            "public_ip": "35.173.118.33",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-demo-vpc-ngw-eip01",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-ngw-eip01",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-demo-vpc-ngw02",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d15f756b0805a9e",
            "arn": "arn:aws:ec2:us-east-1:991311245747:elastic-ip/eipalloc-05d15f756b0805a9e",
            "association_id": "eipassoc-08f49b9b88299e43b",
            "domain": "vpc",
            "id": "eipalloc-05d15f756b0805a9e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-085223222db0f1891",
            "private_dns": "ip-10-0-42-243.ec2.internal",
            "private_ip": "10.0.42.243",
            "public_dns": "ec2-100-29-131-43.compute-1.amazonaws.com",
            "public_ip": "100.29.131.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-demo-vpc-ngw-eip02",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-ngw-eip02",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-demo-vpc-ngw03",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005d6471e2dbbd5a7",
            "arn": "arn:aws:ec2:us-east-1:991311245747:elastic-ip/eipalloc-005d6471e2dbbd5a7",
            "association_id": "eipassoc-0f00a6af3cf18cd5d",
            "domain": "vpc",
            "id": "eipalloc-005d6471e2dbbd5a7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e5a65588428e6af7",
            "private_dns": "ip-10-0-70-108.ec2.internal",
            "private_ip": "10.0.70.108",
            "public_dns": "ec2-54-81-186-111.compute-1.amazonaws.com",
            "public_ip": "54.81.186.111",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-demo-vpc-ngw-eip03",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-ngw-eip03",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991311245747:internet-gateway/igw-0b74b6426b43b2932",
            "id": "igw-0b74b6426b43b2932",
            "owner_id": "991311245747",
            "tags": {
              "Name": "dev-demo-vpc-igw",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-igw",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "vpc_id": "vpc-014f14080ca872713"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-demo-vpc-ngw01",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd22b68fd80479d7",
            "association_id": "eipassoc-0c850c99c50c7b68a",
            "connectivity_type": "public",
            "id": "nat-0410f8ccdcff1bb34",
            "network_interface_id": "eni-0b4c45fa3811f6552",
            "private_ip": "10.0.2.151",
            "public_ip": "35.173.118.33",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03e40d4fa61477023",
            "tags": {
              "Name": "dev-demo-vpc-ngw01",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-ngw01",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-demo-vpc-ngw02",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d15f756b0805a9e",
            "association_id": "eipassoc-08f49b9b88299e43b",
            "connectivity_type": "public",
            "id": "nat-030b849dc7cae6db2",
            "network_interface_id": "eni-085223222db0f1891",
            "private_ip": "10.0.42.243",
            "public_ip": "100.29.131.43",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de9110759253ff82",
            "tags": {
              "Name": "dev-demo-vpc-ngw02",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-ngw02",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-demo-vpc-ngw03",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005d6471e2dbbd5a7",
            "association_id": "eipassoc-0f00a6af3cf18cd5d",
            "connectivity_type": "public",
            "id": "nat-02846226ad97b882d",
            "network_interface_id": "eni-0e5a65588428e6af7",
            "private_ip": "10.0.70.108",
            "public_ip": "54.81.186.111",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02332557209acc13f",
            "tags": {
              "Name": "dev-demo-vpc-ngw03",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-ngw03",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private01-rt-dev-demo-vpc",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0158e59ebb86014621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0410f8ccdcff1bb34",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0158e59ebb8601462",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.routes"
          ]
        },
        {
          "index_key": "private02-rt-dev-demo-vpc",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09f3e83977e81f48d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-030b849dc7cae6db2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09f3e83977e81f48d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.routes"
          ]
        },
        {
          "index_key": "private03-rt-dev-demo-vpc",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0106ce8185470d6681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02846226ad97b882d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0106ce8185470d668",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.routes"
          ]
        },
        {
          "index_key": "public-rt-dev-demo-vpc",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b74b6426b43b2932",
            "id": "r-rtb-0078fc9a82e8977ee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0078fc9a82e8977ee",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.routes",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private01-rt-dev-demo-vpc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991311245747:route-table/rtb-0158e59ebb8601462",
            "id": "rtb-0158e59ebb8601462",
            "owner_id": "991311245747",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0410f8ccdcff1bb34",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private01-rt-dev-demo-vpc",
              "Network": "Private1",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "private01-rt-dev-demo-vpc",
              "Network": "Private1",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-014f14080ca872713"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "private02-rt-dev-demo-vpc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991311245747:route-table/rtb-09f3e83977e81f48d",
            "id": "rtb-09f3e83977e81f48d",
            "owner_id": "991311245747",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-030b849dc7cae6db2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private02-rt-dev-demo-vpc",
              "Network": "Private2",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "private02-rt-dev-demo-vpc",
              "Network": "Private2",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-014f14080ca872713"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "private03-rt-dev-demo-vpc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991311245747:route-table/rtb-0106ce8185470d668",
            "id": "rtb-0106ce8185470d668",
            "owner_id": "991311245747",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02846226ad97b882d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private03-rt-dev-demo-vpc",
              "Network": "Private3",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "private03-rt-dev-demo-vpc",
              "Network": "Private3",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-014f14080ca872713"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "public-rt-dev-demo-vpc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991311245747:route-table/rtb-0078fc9a82e8977ee",
            "id": "rtb-0078fc9a82e8977ee",
            "owner_id": "991311245747",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b74b6426b43b2932",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-dev-demo-vpc",
              "Network": "Public1",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "public-rt-dev-demo-vpc",
              "Network": "Public1",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-014f14080ca872713"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-demo-vpc-private-subnet01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d27ba70969f1b54",
            "route_table_id": "rtb-0158e59ebb8601462",
            "subnet_id": "subnet-0936417b243f13060"
          },
          "dependencies": [
            "module.vpc.aws_route_table.routes",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-demo-vpc-private-subnet02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffac277805616d7c",
            "route_table_id": "rtb-09f3e83977e81f48d",
            "subnet_id": "subnet-088b328e1f202d04a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.routes",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-demo-vpc-private-subnet03",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a50a2537a19b58e",
            "route_table_id": "rtb-0106ce8185470d668",
            "subnet_id": "subnet-0d6915c11776fd355"
          },
          "dependencies": [
            "module.vpc.aws_route_table.routes",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-demo-vpc-public-subnet01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a95c245337ef1933",
            "route_table_id": "rtb-0078fc9a82e8977ee",
            "subnet_id": "subnet-03e40d4fa61477023"
          },
          "dependencies": [
            "module.vpc.aws_route_table.routes",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-demo-vpc-public-subnet02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0752889c5d2c6484c",
            "route_table_id": "rtb-0078fc9a82e8977ee",
            "subnet_id": "subnet-0de9110759253ff82"
          },
          "dependencies": [
            "module.vpc.aws_route_table.routes",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-demo-vpc-public-subnet03",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0657d20882e535e43",
            "route_table_id": "rtb-0078fc9a82e8977ee",
            "subnet_id": "subnet-02332557209acc13f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.routes",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-demo-vpc-private-subnet01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991311245747:subnet/subnet-0936417b243f13060",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0936417b243f13060",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "991311245747",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-demo-vpc-private-subnet01",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-private-subnet01",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "vpc_id": "vpc-014f14080ca872713"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-demo-vpc-private-subnet02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991311245747:subnet/subnet-088b328e1f202d04a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088b328e1f202d04a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "991311245747",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-demo-vpc-private-subnet02",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-private-subnet02",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "vpc_id": "vpc-014f14080ca872713"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-demo-vpc-private-subnet03",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991311245747:subnet/subnet-0d6915c11776fd355",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6915c11776fd355",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "991311245747",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-demo-vpc-private-subnet03",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-private-subnet03",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "vpc_id": "vpc-014f14080ca872713"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-demo-vpc-public-subnet01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991311245747:subnet/subnet-03e40d4fa61477023",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e40d4fa61477023",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "991311245747",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-demo-vpc-public-subnet01",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-public-subnet01",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "vpc_id": "vpc-014f14080ca872713"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-demo-vpc-public-subnet02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991311245747:subnet/subnet-0de9110759253ff82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de9110759253ff82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "991311245747",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-demo-vpc-public-subnet02",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-public-subnet02",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "vpc_id": "vpc-014f14080ca872713"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-demo-vpc-public-subnet03",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991311245747:subnet/subnet-02332557209acc13f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02332557209acc13f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "991311245747",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-demo-vpc-public-subnet03",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-public-subnet03",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "vpc_id": "vpc-014f14080ca872713"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991311245747:vpc/vpc-014f14080ca872713",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f313f3c5ef0a1648",
            "default_route_table_id": "rtb-062c5962f091583f5",
            "default_security_group_id": "sg-049a12b17bd1bee0b",
            "dhcp_options_id": "dopt-0a3b54c54732cb52d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014f14080ca872713",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062c5962f091583f5",
            "owner_id": "991311245747",
            "tags": {
              "Name": "dev-demo-vpc",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            },
            "tags_all": {
              "Name": "dev-demo-vpc",
              "managed_by": "Terraform",
              "module": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}